// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown should call default props onClick function when no onClick property is passed 1`] = `
.c3 {
  font-family: inherit;
  background: transparent;
  font-size: 1em;
  padding: 0.25em 1.5em;
  border: 1px solid;
  border-radius: 4px;
  cursor: pointer;
}

.c6 {
  text-align: center;
}

.c0 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  line-height: 20px;
  color: unset;
}

.c1 {
  position: relative;
}

.c2 {
  font-family: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 40px;
  border: 1px solid;
  border-radius: 4px;
  padding: 1.25em;
  cursor: pointer;
}

.c5 {
  color: #999;
  font-size: 1.25em;
  font-weight: bold;
}

.c4 {
  color: #999;
  font-size: 1.25em;
  font-weight: bold;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

<div
  className="c0"
  fontFamily="openSans"
  size="normal"
>
  <div
    className="c1"
  >
    <button
      className="c2 c3"
      color=""
      onClick={[Function]}
      type="button"
    >
      <span
        className="c4"
      >
        
      </span>
      <span
        className="c5 c6 lni lni-chevron-down"
      />
    </button>
  </div>
</div>
`;

exports[`Dropdown should have onClick listener 1`] = `
.c3 {
  font-family: inherit;
  background: transparent;
  font-size: 1em;
  padding: 0.25em 1.5em;
  border: 1px solid;
  border-radius: 4px;
  cursor: pointer;
}

.c6 {
  text-align: center;
}

.c0 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  line-height: 20px;
  color: unset;
}

.c1 {
  position: relative;
}

.c2 {
  font-family: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 40px;
  border: 1px solid;
  border-radius: 4px;
  padding: 1.25em;
  cursor: pointer;
}

.c5 {
  color: #999;
  font-size: 1.25em;
  font-weight: bold;
}

.c4 {
  color: #999;
  font-size: 1.25em;
  font-weight: bold;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

<div
  className="c0"
  fontFamily="openSans"
  size="normal"
>
  <div
    className="c1"
  >
    <button
      className="c2 c3"
      color=""
      onClick={[Function]}
      type="button"
    >
      <span
        className="c4"
      >
        
      </span>
      <span
        className="c5 c6 lni lni-chevron-down"
      />
    </button>
  </div>
</div>
`;

exports[`Dropdown should render dropdown 1`] = `
.c3 {
  font-family: inherit;
  background: transparent;
  font-size: 1em;
  padding: 0.25em 1.5em;
  border: 1px solid;
  border-radius: 4px;
  cursor: pointer;
}

.c6 {
  text-align: center;
}

.c0 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  line-height: 20px;
  color: unset;
}

.c1 {
  position: relative;
}

.c2 {
  font-family: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 40px;
  border: 1px solid;
  border-radius: 4px;
  padding: 1.25em;
  cursor: pointer;
}

.c5 {
  color: #999;
  font-size: 1.25em;
  font-weight: bold;
}

.c4 {
  color: #999;
  font-size: 1.25em;
  font-weight: bold;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

<div
  className="c0"
  fontFamily="openSans"
  size="normal"
>
  <div
    className="c1"
  >
    <button
      className="c2 c3"
      color=""
      onClick={[Function]}
      type="button"
    >
      <span
        className="c4"
      >
        
      </span>
      <span
        className="c5 c6 lni lni-chevron-down"
      />
    </button>
  </div>
</div>
`;

exports[`Dropdown should render dropdown in open state 1`] = `
.c3 {
  font-family: inherit;
  background: transparent;
  font-size: 1em;
  padding: 0.25em 1.5em;
  border: 1px solid;
  border-radius: 4px;
  cursor: pointer;
}

.c6 {
  text-align: center;
}

.c0 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  line-height: 20px;
  color: unset;
}

.c1 {
  position: relative;
}

.c2 {
  font-family: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 40px;
  border: 1px solid;
  border-radius: 4px;
  padding: 1.25em;
  cursor: pointer;
}

.c7 {
  width: 100%;
  padding: 0;
  border: 1px solid;
  border-top: none;
  position: absolute;
  top: 22px;
  border-radius: 0 0 4px 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  z-index: 1;
  box-sizing: border-box;
}

.c5 {
  color: #999;
  font-size: 1.25em;
  font-weight: bold;
}

.c4 {
  color: #999;
  font-size: 1.25em;
  font-weight: bold;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

<div
  className="c0"
  fontFamily="openSans"
  size="normal"
>
  <div
    className="c1"
  >
    <button
      className="c2 c3"
      color=""
      onClick={[Function]}
      type="button"
    >
      <span
        className="c4"
      >
        
      </span>
      <span
        className="c5 c6 lni lni-chevron-up"
      />
    </button>
    <ul
      className="c7"
    >
      Content
    </ul>
  </div>
</div>
`;

exports[`Dropdown should render react node children 1`] = `
.c3 {
  font-family: inherit;
  background: transparent;
  font-size: 1em;
  padding: 0.25em 1.5em;
  border: 1px solid;
  border-radius: 4px;
  cursor: pointer;
}

.c6 {
  text-align: center;
}

.c0 {
  font-family: "Open Sans",sans-serif;
  font-size: 16px;
  line-height: 20px;
  color: unset;
}

.c1 {
  position: relative;
}

.c2 {
  font-family: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 40px;
  border: 1px solid;
  border-radius: 4px;
  padding: 1.25em;
  cursor: pointer;
}

.c7 {
  width: 100%;
  padding: 0;
  border: 1px solid;
  border-top: none;
  position: absolute;
  top: 22px;
  border-radius: 0 0 4px 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  list-style: none;
  z-index: 1;
  box-sizing: border-box;
}

.c5 {
  color: #999;
  font-size: 1.25em;
  font-weight: bold;
}

.c4 {
  color: #999;
  font-size: 1.25em;
  font-weight: bold;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

<div
  className="c0"
  fontFamily="openSans"
  size="normal"
>
  <div
    className="c1"
  >
    <button
      className="c2 c3"
      color=""
      onClick={[Function]}
      type="button"
    >
      <span
        className="c4"
      >
        
      </span>
      <span
        className="c5 c6 lni lni-chevron-up"
      />
    </button>
    <ul
      className="c7"
    >
      <div>
        Test content
      </div>
    </ul>
  </div>
</div>
`;
